[gd_scene load_steps=12 format=3 uid="uid://pqp5cx0ei2tb"]

[ext_resource type="PackedScene" uid="uid://ccv4kl7ygh1c6" path="res://scenes/Player/Untitled1.glb" id="1_tkelc"]
[ext_resource type="Script" uid="uid://npeigamgmtun" path="res://scenes/Player/meat_tank.gd" id="2_2sige"]
[ext_resource type="Script" uid="uid://c7554dwiw4quj" path="res://scenes/Player/spider_bot/start_ik.gd" id="2_cvtkg"]
[ext_resource type="Script" uid="uid://cvppf16by64p3" path="res://scenes/Player/spider_bot/ik_target.gd" id="3_2sige"]
[ext_resource type="Texture2D" uid="uid://bjem0equq7c2m" path="res://scenes/Player/Untitled1_main texture.png" id="3_5a400"]
[ext_resource type="Script" uid="uid://cvjfl81d7rshp" path="res://scenes/Player/SpringArmPivot.gd" id="4_5a400"]
[ext_resource type="Script" uid="uid://dji4w86dfmjly" path="res://scenes/Player/spider_bot/StepTargetContainer.gd" id="4_gacvd"]
[ext_resource type="Script" uid="uid://1g3w36rtmt44" path="res://scenes/Player/spider_bot/step_ray.gd" id="5_5a400"]
[ext_resource type="PackedScene" uid="uid://ffmacfd1nhsf" path="res://scenes/Egg/Egg.tscn" id="6_fn6yx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sw4ge"]
albedo_texture = ExtResource("3_5a400")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8fixc"]

[node name="Meat_tank" instance=ExtResource("1_tkelc")]
script = ExtResource("2_2sige")

[node name="Leg" parent="Armature/Skeleton3D" index="0"]
material_override = SubResource("StandardMaterial3D_sw4ge")

[node name="FrontLeftIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="2"]
process_priority = 1
root_bone = &"leg1FrontLeft"
tip_bone = &"Foot IKFrontLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontLeftIKTarget")
script = ExtResource("2_cvtkg")

[node name="FrontRightIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="3"]
process_priority = 1
root_bone = &"leg1FrontRight"
tip_bone = &"Foot IKFrontRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../FrontRightIKTarget")
script = ExtResource("2_cvtkg")

[node name="BackLeftIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="4"]
process_priority = 1
root_bone = &"leg1BackLeft"
tip_bone = &"Foot IKBackLeft"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackLeftIKTarget")
script = ExtResource("2_cvtkg")

[node name="BackRightIK" type="SkeletonIK3D" parent="Armature/Skeleton3D" index="5"]
process_priority = 1
root_bone = &"leg1BackRight"
tip_bone = &"Foot IKBackRight"
use_magnet = true
magnet = Vector3(0, 10, 0)
target_node = NodePath("../../../BackRightIKTarget")
script = ExtResource("2_cvtkg")

[node name="camera_mount" type="Node3D" parent="Armature" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5769539, 0)
script = ExtResource("4_5a400")

[node name="SpringArm3D" type="SpringArm3D" parent="Armature/camera_mount" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4118929, 1.3080688)
spring_length = 4.0

[node name="Camera3D" type="Camera3D" parent="Armature/camera_mount/SpringArm3D" index="0"]
transform = Transform3D(1, 0, 0, 0, 0.9965655, 0.08280821, 0, -0.08280821, 0.9965655, 0, 0.022227407, 0.020395637)

[node name="FrontLeftIKTarget" type="Marker3D" parent="." index="3" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.59332, -2.10824, -3.54813)
top_level = true
script = ExtResource("3_2sige")
step_target = NodePath("../StepTargetContainer/FrontLeftRay/FrontLeftStepTarget")
adjacent_target = NodePath("../FrontRightIKTarget")
opposite_target = NodePath("../BackRightIKTarget")

[node name="FrontRightIKTarget" type="Marker3D" parent="." index="4" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.59141, -2.10824, -3.54813)
top_level = true
script = ExtResource("3_2sige")
step_target = NodePath("../StepTargetContainer/FrontRightRay/FrontRightStepTarget")
adjacent_target = NodePath("../FrontLeftIKTarget")
opposite_target = NodePath("../BackLeftIKTarget")

[node name="BackLeftIKTarget" type="Marker3D" parent="." index="5" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
top_level = true
script = ExtResource("3_2sige")
step_target = NodePath("../StepTargetContainer/BackLeftRay/BackLeftStepTarget")
adjacent_target = NodePath("../BackRightIKTarget")
opposite_target = NodePath("../FrontRightIKTarget")

[node name="BackRightIKTarget" type="Marker3D" parent="." index="6" node_paths=PackedStringArray("step_target", "adjacent_target", "opposite_target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.59141, -2.10824, 3.59141)
top_level = true
script = ExtResource("3_2sige")
step_target = NodePath("../StepTargetContainer/BackRightRay/BackRightStepTarget")
adjacent_target = NodePath("../BackLeftIKTarget")
opposite_target = NodePath("../FrontLeftIKTarget")

[node name="StepTargetContainer" type="Node3D" parent="." index="7"]
script = ExtResource("4_gacvd")

[node name="FrontLeftRay" type="RayCast3D" parent="StepTargetContainer" index="0" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, 4.63889e-10, -0.0868241, 0.992404, -0.0871557, -0.00759612, 0.0868241, 0.996195, -3.13864, 3.06899, -3.09518)
target_position = Vector3(0, -10, 0)
script = ExtResource("5_5a400")
step_target = NodePath("FrontLeftStepTarget")

[node name="FrontLeftStepTarget" type="Marker3D" parent="StepTargetContainer/FrontLeftRay" index="0"]
transform = Transform3D(0.996195, -0.0868241, -0.00759612, 0.0871557, 0.992404, 0.0868241, 9.31322e-10, -0.0871557, 0.996195, 0, -5.21685, 0)

[node name="FrontRightRay" type="RayCast3D" parent="StepTargetContainer" index="1" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, -4.63889e-10, 0.0868241, 0.992404, -0.0871557, 0.00759612, 0.0868241, 0.996195, 3.13673, 3.06899, -3.09518)
target_position = Vector3(0, -10, 0)
script = ExtResource("5_5a400")
step_target = NodePath("FrontRightStepTarget")

[node name="FrontRightStepTarget" type="Marker3D" parent="StepTargetContainer/FrontRightRay" index="0"]
transform = Transform3D(0.996195, 0.0868241, 0.00759612, -0.0871557, 0.992404, 0.0868241, -9.31322e-10, -0.0871557, 0.996195, -2.38419e-07, -5.21685, 0)

[node name="BackLeftRay" type="RayCast3D" parent="StepTargetContainer" index="2" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, 0.0871557, -4.63889e-10, -0.0868241, 0.992404, 0.0871557, 0.00759612, -0.0868241, 0.996195, -3.13864, 3.06899, 3.13846)
target_position = Vector3(0, -10, 0)
script = ExtResource("5_5a400")
step_target = NodePath("BackLeftStepTarget")

[node name="BackLeftStepTarget" type="Marker3D" parent="StepTargetContainer/BackLeftRay" index="0"]

[node name="BackRightRay" type="RayCast3D" parent="StepTargetContainer" index="3" node_paths=PackedStringArray("step_target")]
transform = Transform3D(0.996195, -0.0871557, 4.63889e-10, 0.0868241, 0.992404, 0.0871557, -0.00759612, -0.0868241, 0.996195, 3.13673, 3.06899, 3.13846)
target_position = Vector3(0, -10, 0)
script = ExtResource("5_5a400")
step_target = NodePath("BackRightStepTarget")

[node name="BackRightStepTarget" type="Marker3D" parent="StepTargetContainer/BackRightRay" index="0"]
transform = Transform3D(0.996195, 0.0868241, -0.00759612, -0.0871557, 0.992404, -0.0868241, 9.31322e-10, 0.0871557, 0.996195, -2.38419e-07, -5.21685, -2.38419e-07)

[node name="Egg" parent="." index="8" instance=ExtResource("6_fn6yx")]

[node name="Area3D" type="Area3D" parent="." index="9"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D" index="0"]
visible = false
mesh = SubResource("CapsuleMesh_8fixc")
